<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/departmentFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/radioGroupeDept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonComputer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_science" />

        <RadioButton
            android:id="@+id/radioButtonSoft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soft_info_sys" />

        <RadioButton
            android:id="@+id/radioButtonBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio_info" />

        <RadioButton
            android:id="@+id/radioButtonData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_science" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>